# capstone

./: .gitignore  DEMO_SCRIPT.txt  Makefile  README.md  SUBMISSION_WRITEUP.md  evaluation.md  pyproject.toml  task.md  test_queries.md
assets/: DEMO_SCRIPT.txt  SUBMISSION_WRITEUP.md  adk_ui_traces_guide.md  balu.md
backend/: __init__.py  app.py  config.py  run_diagnostics.py  scratch_inspect.json  test_e2e.py
backend/agents/: executive_agent.py
backend/api/: analysis.py  upload.py
backend/database/: supabase.py
backend/services/: a2a_service.py  agentops_service.py  dataset_service.py  execution_trace.py  forecast_service.py  gemini_client_service.py  intent_service.py  memory_manager.py  skill_manager.py  storage_service.py  token_manager.py
backend/tests/: test_intent_orchestration.py  test_reliability.py  test_sdd.py
backend/tools/: analytics_tools.py  dataset_tools.py  generate_report.py  load_csv.py  mcp_client.py  report_tools.py  run_analysis.py
data/: customers_large.csv  forecast_enterprise.csv  inventory_large.csv  marketing_large.csv  sales_large.csv
frontend/: app.py
mcp_server/: server.py
mcp_server/capabilities/: __init__.py  generate_artifact.py  (+3 more)
scratch/: balu_demo.md  check_db.py  check_seeded.py  inspect_agent_runs.py  inspect_metrics.py  inspect_sums.py  list_all_db_datasets.py  report_output.md  reset_data.py  run_playground_query.py  test_altair.py  test_analytics.py  test_async_node.py  test_fixed_security.py  test_keys.py  test_one_call.py  test_revenue_drop.py  test_sec_check.py  test_workflow.py  trigger_analysis.py
(+25 files in other folders)
