[project]
name = "boardroom-ai"
version = "0.1.0"
description = "Boardroom AI: Multi-Agent Strategic Advisory & Advanced Analytics Fleet"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "mcp>=1.0.0,<2.0.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "duckdb>=0.10.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.3.0",
    "jinja2>=3.1.0",
    "litellm>=1.89.4",
    "tabulate>=0.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
